--- a/public/reservations.html
+++ b/public/reservations.html
@@ -1,5 +1,4 @@
-<!doctype html><html><head><meta charset="utf-8"/><title>Reservas</title>
-<meta name="viewport" content="width=device-width, initial-scale=1"></head>
+<!doctype html><html><head><meta charset="utf-8"/><title>Reservas</title><meta name="viewport" content="width=device-width, initial-scale=1"></head>
 <body style="font-family:system-ui;max-width:800px;margin:24px auto">
 <h2>Agenda / Reservas</h2>
 <form id="f">
@@ -10,33 +9,5 @@
   <button>Agendar</button>
 </form>
 <ul id="list"></ul>
-<script>
-async function load(){
-  const bot_id = document.querySelector('input[name="bot_id"]').value || 'default';
-  const res = await fetch('/api/appointments?bot_id='+encodeURIComponent(bot_id)); const data = await res.json();
-  const list = document.getElementById('list'); list.innerHTML='';
-  data.forEach(a=>{
-    const li = document.createElement('li');
-    li.textContent = a.customer + ' - ' + a.starts_at + ' ('+(a.notes||'')+')';
-    list.appendChild(li);
-  });
-}
-document.getElementById('f').addEventListener('submit', async (e)=>{
-  e.preventDefault();
-  const f = e.target;
-  const payload = {
-    bot_id: f.bot_id.value || 'default',
-    customer: f.customer.value,
-    starts_at: f.starts_at.value, // server normaliza
-    notes: f.notes.value
-  };
-  const r = await fetch('/api/appointments',{
-    method:'POST', headers:{'Content-Type':'application/json'},
-    body: JSON.stringify(payload)
-  });
-  if(!r.ok){ alert('No se pudo agendar: ' + (await r.text())); }
-  f.reset(); load();
-});
-load();
-</script>
+<script src="/js/reservations.js" defer></script>
 </body></html>
