--- a/public/rules.html
+++ b/public/rules.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><meta charset="utf-8"/><title>Reglas</title></head><body>
+<!doctype html><html><head><meta charset="utf-8"/><title>Reglas</title><meta name="viewport" content="width=device-width, initial-scale=1"></head><body>
 <h2>Reglas de negocio</h2>
 <div style="margin-bottom:12px; padding:8px; border:1px solid #ddd">
   <label>Bot ID: <input id="bot_id" value="default"></label>
@@ -44,96 +44,5 @@
 </form>
 <h3>Listado</h3>
 <ul id="list"></ul>
-<script>
-const FILTER_KEY = 'rules_filter_mode_v2';
-async function load(){
-  const modeSel = document.getElementById('mode');
-  const mode = modeSel.value;
-  localStorage.setItem(FILTER_KEY, mode);
-  const bot_id = document.querySelector('input#bot_id').value || 'default';
-  const url = '/api/rules?bot_id='+encodeURIComponent(bot_id)+(mode ? '&mode='+encodeURIComponent(mode) : '');
-  const res = await fetch(url); const data = await res.json();
-  const list = document.getElementById('list'); list.innerHTML='';
-  data.forEach(r=>{
-    const triggers = Array.isArray(r.triggers)?r.triggers:JSON.parse(r.triggers||'[]');
-    const li = document.createElement('li');
-    li.innerHTML = '<b>['+r.mode+'] '+r.condition+'</b> (pri:'+r.priority+')<br/>'+triggers.join(', ')+'<br/>'+r.action + '<br/>' + 
-      '<button data-id="'+r.id+'" class="edit">Editar</button> <button data-id="'+r.id+'" class="del">Eliminar</button>';
-    list.appendChild(li);
-  });
-}
-document.getElementById('load').addEventListener('click', load);
-document.getElementById('restore').addEventListener('click', async ()=>{
-  const bot_id = document.querySelector('input#bot_id').value || 'default';
-  if(!confirm('Restaurar reglas base (se eliminarán las actuales)?')) return;
-  await fetch('/api/rules/restore-defaults',{method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ bot_id })});
-  load();
-});
-document.getElementById('form').addEventListener('submit', async (e)=>{
-  e.preventDefault();
-  const f = e.target;
-  const obj = { 
-    bot_id: f.bot_id.value || 'default',
-    mode: f.mode.value, 
-    condition: f.condition.value, 
-    triggers: f.triggers.value.split('\n').map(s=>s.trim()).filter(Boolean), 
-    action: f.action.value, 
-    priority: parseInt(f.priority.value)||50 
-  };
-  const id = f.id.value;
-  if(id){
-    await fetch('/api/rules/'+id, { method:'PUT', headers:{'Content-Type':'application/json'}, body: JSON.stringify(obj) });
-  } else {
-    await fetch('/api/rules', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(obj) });
-  }
-  f.reset(); load();
-});
-document.getElementById('list').addEventListener('click', async (e)=>{
-  if(e.target.classList.contains('del')){
-    const id = e.target.getAttribute('data-id');
-    if(confirm('Eliminar regla?')){ await fetch('/api/rules/'+id,{method:'DELETE'}); load(); }
-  } else if(e.target.classList.contains('edit')){
-    const id = e.target.getAttribute('data-id');
-    const bot_id = document.querySelector('input#bot_id').value || 'default';
-    const res = await fetch('/api/rules?bot_id='+encodeURIComponent(bot_id)); const rules = await res.json();
-    const r = rules.find(x=>String(x.id)===String(id));
-    if(r){
-      const f = document.getElementById('form');
-      f.id.value = r.id;
-      f.bot_id.value = r.bot_id || bot_id;
-      f.mode.value = r.mode;
-      const triggers = Array.isArray(r.triggers)?r.triggers:JSON.parse(r.triggers||'[]');
-      f.condition.value = r.condition;
-      f.triggers.value = triggers.join('\n');
-      f.action.value = r.action;
-      f.priority.value = r.priority;
-      window.scrollTo(0,0);
-    }
-  }
-});
-async function loadBotMode(){
-  const bot_id = document.getElementById('bot_id').value || 'default';
-  const r = await fetch('/api/config?bot_id='+encodeURIComponent(bot_id));
-  const j = await r.json();
-  if(j.ok && j.config){ document.getElementById('bot_mode').value = j.config.mode; }
-}
-document.getElementById('saveMode').addEventListener('click', async ()=>{
-  const bot_id = document.getElementById('bot_id').value || 'default';
-  const mode = document.getElementById('bot_mode').value;
-  const r = await fetch('/api/config', {
-    method:'POST',
-    headers:{'Content-Type':'application/json'},
-    body: JSON.stringify({ bot_id, mode })
-  });
-  const ok = (await r.json()).ok;
-  document.getElementById('modeMsg').textContent = ok ? 'Guardado' : 'Error';
-  setTimeout(()=> document.getElementById('modeMsg').textContent='', 1500);
-});
-(function init(){
-  const saved = localStorage.getItem(FILTER_KEY);
-  if(saved!==null){ document.getElementById('mode').value = saved; }
-  load();
-  loadBotMode();
-})();
-</script>
+<script src="/js/rules.js" defer></script>
 </body></html>
