--- a/public/products.html
+++ b/public/products.html
@@ -1,5 +1,4 @@
-<!doctype html><html><head><meta charset="utf-8"/><title>Productos</title>
-<meta name="viewport" content="width=device-width, initial-scale=1"></head>
+<!doctype html><html><head><meta charset="utf-8"/><title>Productos</title><meta name="viewport" content="width=device-width, initial-scale=1"></head>
 <body style="font-family:system-ui;max-width:800px;margin:24px auto">
 <h2>Productos</h2>
 <form id="f">
@@ -10,31 +9,5 @@
   <button>Agregar</button>
 </form>
 <ul id="list"></ul>
-<script>
-async function load(){
-  const bot_id = document.querySelector('input[name="bot_id"]').value || 'default';
-  const res = await fetch('/api/products?bot_id='+encodeURIComponent(bot_id)); const data = await res.json();
-  const list = document.getElementById('list'); list.innerHTML='';
-  data.forEach(p=>{
-    const li = document.createElement('li');
-    li.textContent = p.name + ' - $' + p.price + ' (stock:'+p.stock+')';
-    list.appendChild(li);
-  });
-}
-document.getElementById('f').addEventListener('submit', async (e)=>{
-  e.preventDefault();
-  const f = e.target;
-  await fetch('/api/products',{
-    method:'POST', headers:{'Content-Type':'application/json'},
-    body: JSON.stringify({
-      bot_id: f.bot_id.value || 'default',
-      name: f.name.value,
-      price: parseFloat(f.price.value),
-      stock: parseInt(f.stock.value)
-    })
-  });
-  f.reset(); load();
-});
-load();
-</script>
+<script src="/js/products.js" defer></script>
 </body></html>
