--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,1 @@
-<!doctype html>
-<html>
-<head><meta charset="utf-8"/><title>Chat Bot</title><meta name="viewport" content="width=device-width, initial-scale=1"></head>
-<body style="font-family:system-ui;max-width:800px;margin:24px auto">
-<h2>Chat Bot</h2>
-<div style="margin:8px 0">
-  <label>Bot ID: <input id="bot_id" value="default"></label>
-  <label style="margin-left:12px">Mode: <span id="mode">loading...</span></label>
-  <span style="margin-left:12px">
-    <a href="/config.html" target="_blank">Admin Config</a> |
-    <a href="/rules.html" target="_blank">Reglas</a> |
-    <a href="/products.html" target="_blank">Productos</a> |
-    <a href="/reservations.html" target="_blank">Reservas</a>
-  </span>
-</div>
-<div id="chat" style="border:1px solid #ddd;padding:10px;height:320px;overflow:auto"></div>
-<div style="margin-top:8px">
-  <input id="msg" placeholder="Escribe..." style="width:70%">
-  <button id="send">Enviar</button>
-</div>
-<script src="/js/index.js" defer></script>
-</body></html>
+<!doctype html><html><head><meta charset='utf-8'/><title>Chat Bot</title><meta name='viewport' content='width=device-width, initial-scale=1'></head><body style='font-family:system-ui;max-width:800px;margin:24px auto'><h2>Chat Bot</h2><div style='margin:8px 0'><label>Bot ID: <input id='bot_id' value='default'></label><label style='margin-left:12px'>Mode: <span id='mode'>loading...</span></label><span style='margin-left:12px'><a href='/config.html' target='_blank'>Admin Config</a> | <a href='/rules.html' target='_blank'>Reglas</a> | <a href='/products.html' target='_blank'>Productos</a> | <a href='/reservations.html' target='_blank'>Reservas</a></span></div><div id='chat' style='border:1px solid #ddd;padding:10px;height:320px;overflow:auto'></div><div style='margin-top:8px'><input id='msg' placeholder='Escribe...' style='width:70%'><button id='send'>Enviar</button></div><script src='/js/index.js' defer></script></body></html>
