--- a/public/products.html
+++ b/public/products.html
@@ -1,13 +1,1 @@
-<!doctype html><html><head><meta charset="utf-8"/><title>Productos</title><meta name="viewport" content="width=device-width, initial-scale=1"></head>
-<body style="font-family:system-ui;max-width:800px;margin:24px auto">
-<h2>Productos</h2>
-<form id="f">
-  <label>Bot ID: <input name="bot_id" value="default" /></label><br/>
-  <input name="name" placeholder="Nombre" required />
-  <input name="price" type="number" step="0.01" placeholder="Precio" required />
-  <input name="stock" type="number" placeholder="Stock" required />
-  <button>Agregar</button>
-</form>
-<ul id="list"></ul>
-<script src="/js/products.js" defer></script>
-</body></html>
+<!doctype html><html><head><meta charset='utf-8'/><title>Productos</title><meta name='viewport' content='width=device-width, initial-scale=1'></head><body style='font-family:system-ui;max-width:800px;margin:24px auto'><h2>Productos</h2><form id='f'><label>Bot ID: <input name='bot_id' value='default' /></label><br/><input name='name' placeholder='Nombre' required /><input name='price' type='number' step='0.01' placeholder='Precio' required /><input name='stock' type='number' placeholder='Stock' required /><button>Agregar</button></form><ul id='list'></ul><script src='/js/products.js' defer></script></body></html>
