--- a/public/reservations.html
+++ b/public/reservations.html
@@ -1,13 +1,1 @@
-<!doctype html><html><head><meta charset="utf-8"/><title>Reservas</title><meta name="viewport" content="width=device-width, initial-scale=1"></head>
-<body style="font-family:system-ui;max-width:800px;margin:24px auto">
-<h2>Agenda / Reservas</h2>
-<form id="f">
-  <label>Bot ID: <input name="bot_id" value="default" /></label><br/>
-  <input name="customer" placeholder="Cliente" required />
-  <input name="starts_at" type="datetime-local" required />
-  <input name="notes" placeholder="Notas" />
-  <button>Agendar</button>
-</form>
-<ul id="list"></ul>
-<script src="/js/reservations.js" defer></script>
-</body></html>
+<!doctype html><html><head><meta charset='utf-8'/><title>Reservas</title><meta name='viewport' content='width=device-width, initial-scale=1'></head><body style='font-family:system-ui;max-width:800px;margin:24px auto'><h2>Agenda / Reservas</h2><form id='f'><label>Bot ID: <input name='bot_id' value='default' /></label><br/><input name='customer' placeholder='Cliente' required /><input name='starts_at' type='datetime-local' required /><input name='notes' placeholder='Notas' /><button>Agendar</button></form><ul id='list'></ul><script src='/js/reservations.js' defer></script></body></html>
