--- a/public/rules.html
+++ b/public/rules.html
@@ -1,48 +1,1 @@
-<!doctype html><html><head><meta charset="utf-8"/><title>Reglas</title><meta name="viewport" content="width=device-width, initial-scale=1"></head><body>
-<h2>Reglas de negocio</h2>
-<div style="margin-bottom:12px; padding:8px; border:1px solid #ddd">
-  <label>Bot ID: <input id="bot_id" value="default"></label>
-  <label style="margin-left:8px">Modo del bot:
-    <select id="bot_mode">
-      <option value="sales">sales</option>
-      <option value="reservations">reservations</option>
-    </select>
-  </label>
-  <button id="saveMode">Guardar modo</button>
-  <span id="modeMsg" style="margin-left:6px;color:green"></span>
-</div>
-<label>Modo (filtro): 
-  <select id="mode">
-    <option value="">--Todas--</option>
-    <option value="common">common</option>
-    <option value="sales">sales</option>
-    <option value="reservations">reservations</option>
-  </select>
-</label>
-<button id="load">Cargar</button> 
-<button id="restore">Restaurar reglas base</button>
-<h3>Agregar / Editar regla</h3>
-<form id="form">
-  <input name="id" type="hidden" />
-  <label>Bot ID: <input name="bot_id" value="default"></label><br/>
-  <label>Modo: 
-    <select name="mode">
-      <option value="common">common</option>
-      <option value="sales">sales</option>
-      <option value="reservations">reservations</option>
-    </select>
-  </label><br/>
-  <label>Condición (clave): <input name="condition" required /></label><br/>
-  <label>Triggers (una por línea):<br/>
-    <textarea name="triggers" rows="4" cols="60"></textarea>
-  </label><br/>
-  <label>Acción (respuesta con placeholders):<br/>
-    <textarea name="action" rows="4" cols="60" required></textarea>
-  </label><br/>
-  <label>Prioridad: <input name="priority" type="number" value="50" /></label><br/>
-  <button type="submit">Guardar</button>
-</form>
-<h3>Listado</h3>
-<ul id="list"></ul>
-<script src="/js/rules.js" defer></script>
-</body></html>
+<!doctype html><html><head><meta charset='utf-8'/><title>Reglas</title><meta name='viewport' content='width=device-width, initial-scale=1'></head><body><h2>Reglas de negocio</h2><div style='margin-bottom:12px; padding:8px; border:1px solid #ddd'><label>Bot ID: <input id='bot_id' value='default'></label><label style='margin-left:8px'>Modo del bot:<select id='bot_mode'><option value='sales'>sales</option><option value='reservations'>reservations</option></select></label><button id='saveMode'>Guardar modo</button><span id='modeMsg' style='margin-left:6px;color:green'></span></div><label>Modo (filtro): <select id='mode'><option value=''>--Todas--</option><option value='common'>common</option><option value='sales'>sales</option><option value='reservations'>reservations</option></select></label><button id='load'>Cargar</button> <button id='restore'>Restaurar reglas base</button><h3>Agregar / Editar regla</h3><form id='form'><input name='id' type='hidden' /><label>Bot ID: <input name='bot_id' value='default'></label><br/><label>Modo: <select name='mode'><option value='common'>common</option><option value='sales'>sales</option><option value='reservations'>reservations</option></select></label><br/><label>Condición (clave): <input name='condition' required /></label><br/><label>Triggers (una por línea):<br/><textarea name='triggers' rows='4' cols='60'></textarea></label><br/><label>Acción (respuesta con placeholders):<br/><textarea name='action' rows='4' cols='60' required></textarea></label><br/><label>Prioridad: <input name='priority' type='number' value='50' /></label><br/><button type='submit'>Guardar</button></form><h3>Listado</h3><ul id='list'></ul><script src='/js/rules.js' defer></script></body></html>
