--- a/public/config.html
+++ b/public/config.html
@@ -1,1 +1,13 @@
-<!doctype html><html><head><meta charset='utf-8'/><title>Config</title><meta name='viewport' content='width=device-width, initial-scale=1'></head><body style='font-family:system-ui;max-width:900px;margin:24px auto'><h2>Panel - datos que ve el bot</h2><label>Bot ID: <input id='bot_id' value='default' /></label><button id='load'>Cargar</button><h3>Config del bot</h3><pre id='botcfg'></pre><h3>Reglas</h3><pre id='brules'></pre><h3>Productos</h3><pre id='prods'></pre><h3>Reservas</h3><pre id='appts'></pre><script src='/js/config.js' defer></script></body></html>
+<!doctype html><html><head><meta charset="utf-8"/><title>Config</title><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="/styles.css"></head>
+<body>
+  <div class="container">
+    <h2>Panel - datos que ve el bot</h2>
+    <label>Bot ID: <input id="bot_id" value="default" /></label>
+    <button id="load">Cargar</button>
+    <h3>Config del bot</h3><pre id="botcfg"></pre>
+    <h3>Reglas</h3><pre id="brules"></pre>
+    <h3>Productos</h3><pre id="prods"></pre>
+    <h3>Reservas</h3><pre id="appts"></pre>
+  </div>
+  <script src="/js/config.js" defer></script>
+</body></html>
