Punto de partida

--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,1 @@
-<!doctype html><html><head><meta charset="utf-8"/><title>Chat Bot</title><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="/styles.css"></head>
-<body>
-  <div class="container">
-    <h2>Chat Bot</h2>
-    <div class="row">
-      <label>Bot ID: <input id="bot_id" value="default"></label>
-      <label style="margin-left:12px">Mode: <span id="mode">loading...</span></label>
-      <span style="margin-left:12px">
-        <a href="/config.html" target="_blank">Admin Config</a> |
-        <a href="/rules.html" target="_blank">Reglas</a> |
-        <a href="/products.html" target="_blank">Productos</a> |
-        <a href="/reservations.html" target="_blank">Reservas</a>
-      </span>
-    </div>
-    <div id="chat"></div>
-    <div class="row">
-      <input id="msg" placeholder="Escribe..." style="width:70%">
-      <button id="send">Enviar</button>
-    </div>
-  </div>
-  <script src="/js/index.js" defer></script>
-</body></html>
+<!doctype html><html><head><meta charset="utf-8"/><title>Chat Bot</title><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="/styles.css"></head><body><div class="container narrow"><div class="card"><h2>Chat Bot</h2><div class="row linkbar"><label>Bot ID: <input id="bot_id" value="default"></label><label>Mode: <span id="mode">loading...</span></label><span><a href="/config.html" target="_blank">Admin Config</a> | <a href="/rules.html" target="_blank">Reglas</a> | <a href="/products.html" target="_blank">Productos</a> | <a href="/reservations.html" target="_blank">Reservas</a></span></div><div class="chatWrap"><div id="chat"></div></div><div class="row" style="margin-top:8px"><input id="msg" placeholder="Escribe..." class="w70"><button id="send">Enviar</button></div></div></div><script src="/js/index.js" defer></script></body></html>
